# autovet

./: Cargo.toml  README.md
autovet/: Cargo.toml
autovet-api/: Cargo.toml  spec.yml
autovet-api/src/: main.rs
autovet-core/: Cargo.toml
autovet-core/src/: analysis.rs  definition.rs  lib.rs  package.rs  pacman.rs  worker.rs
autovet-poll/: Cargo.toml
autovet-poll/src/: main.rs  pacman.rs
autovet-worker/: Cargo.toml
autovet-worker/src/: main.rs
autovet-worker/src/static/: detect_packer.rs  string_search.rs  waterfall.rs  x86_64.rs
autovet/.github/workflows/: regenerate.yml
autovet/src/: main.rs
autovet/src/cmd/: mod.rs  pacman.rs  test.rs
