[package]
name = "autovet-core"
version = "0.0.1"
edition = "2021"

[dependencies]
reqwest = { version = "0", features=["blocking", "stream", "json"] }
serde = { version="1", features = ["derive"] }
serde_json = { version="1" }
simple-error = "0"
log = { version = "0", default-features = false }
strum = "0"
strum_macros = "0"
