[package]
name = "autovet-poll"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0"
log = { version = "0", default-features = false }
reqwest = { version = "0", features=["blocking", "stream", "json"] }
flate2 = "1"
tar = "0"
autovet-core = { path="../autovet-core", version = "0.0.1" }
serde = { version="1", features = ["derive"] }
serde_json = { version="1" }
