[package]
name = "autovet-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0"
log = { version = "0", default-features = false }
reqwest = { version = "0", features=["blocking", "stream", "json"] }
autovet-core = { path="../autovet-core", version = "0.0.1" }
gethostname = "0"
serde = { version="1", features = ["derive"] }
serde_json = { version="1" }
iced-x86 = { version="1.17.0", default-features = false, features=["decoder", "std"] }

[dev-dependencies]
iced-x86 = { version="1.17.0", default-features = false, features=["decoder", "std", "encoder", "code_asm"] }
